# python-nix-poetry-template

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile-main  Dockerfile-test  Makefile  Readme.md  default.nix  docker-compose.yml  poetry_install.sh  pyproject.toml  shell.nix
tests/: test_init.py
